connected to api

--- a/randomQuote/index.html
+++ b/randomQuote/index.html
@@ -11,8 +11,9 @@
             <p id="author">- Someone</p>
             <div class="actions">
                 <button>Twitter</button>
-                <button>New quote</button>
+                <button id="newQuote">New quote</button>
             </div>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
