created weather app

--- a/randomQuote/index.html
+++ b/randomQuote/index.html
@@ -10,9 +10,9 @@
             <q id="quote"></q>
             <p><cite>~<span id="author"></span>~</cite></p>
             <div class="actions">
-                <button><a class="twitter-share-button" id="twitter" 
-  href="https://twitter.com/intent/tweet?text=Hello%20world">
-Tweet</a></button>
+                <button>
+		    <a class="twitter-share-button" id="twitter" href="https://twitter.com/intent/tweet?text=">Tweet</a>
+		</button>
                 <button id="newQuote">New quote</button>
             </div>
         </div>
