--- a/wikipedia/index.html
+++ b/wikipedia/index.html
@@ -12,7 +12,7 @@
             <br>
             <label for="wikiSearch">Search for Wikipedia Article</label>
             <input type="search" name="wikiSearch">
-            <div class="results">
+            <div id="results">
 
             </div>
         </div> 
