--- a/twitch/index.html
+++ b/twitch/index.html
@@ -6,21 +6,7 @@
       <button id="online">Online</button>
       <button id="offline">Offline</button>
     </header>
-    <section class ="streamer">
-      <img src="">
-      <h2>name</h2>
-      <p>status</p>
-    </section>
-    <section class ="streamer">
-      <img src="">
-      <h2>name</h2>
-      <p>status</p>
-    </section>
-    <section class ="streamer">
-      <img src="">
-      <h2>name</h2>
-      <p>status</p>
-    </section>
+    <section id="streamers"></section>
     <script src="main.js"></script>
   </div>
 </body>
